udpated index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div id="contact-section">
              <h2>Contact</h2> 
           <div class="forms-section">
-                <form action="gideonmensah201@gmail.com" target="_self" >
+                <form action="gideonmensah201@gmail.com" target="_self" method="post">
                     <label>
                         Write me through my E-mail here
                     </label>
@@ -71,7 +71,7 @@
                 <a href="https://www.linkedin.com/in/gideon-ampomah-mensah-ab6911233/"><img src="linkedin.png" alt=""></a>
                 <a href="https://twitter.com/Mensah27671195"><img src="twit.png" alt=""></a>
                 <a href="https://web.facebook.com/profile.php?id=100004549511747"><img src="facebook.png" alt=""></a>
-                <a href="0248096575"> <img src="whatsapp.png" alt=""></a>
+                <a href="https://github.com/Amp41-mensah"> <img src="github.png" alt=""></a>
 
               </div>
 
